# binary_xml

./: .gitignore  .vprg  CMakeLists.txt  LICENSE  README.md  t  tc  tcd  w  x
.github/workflows/: ccpp.yml
doc/: TODO.md  diary.md  distributed.md  ideas.md
include/: ANSI.h  bin_message_queues.h  bin_write2_plugin.h  bin_write_plugin.h  bin_xml.h  bin_xml_creator.h  bin_xml_packer.h  bin_xml_plugin.h  bin_xml_types.h  files.h  macros.h  missings.h  utils.h
include/binary_xml/: bin_json_plugin.h  bin_write2_plugin.h  bin_write_plugin.h  bin_xml.h  bin_xml_packer.h  bin_xml_types.h  files.h  macros.h  utils.h
include/binary_xml/jsmn/: jsmn.h
include/jsmn/: jsmn.h
src/: bin_json_plugin.cpp  bin_write_plugin.cpp  bin_xml.cpp  bin_xml_creator.cpp  bin_xml_packer.cpp  bin_xml_plugin.cpp  bin_xml_types.cpp  files.cpp  macros.cpp  missings.cpp  utils.cpp
src/jsmn/: jsmn.c
src/tests/: 2xb.cpp  2xbw.cpp  test-creating.cpp  test-data.cpp  test-data.h  test-file-small.xml  test-json.cpp  xb2cpp.cpp  xb2xml.cpp  xb_creating.cpp
test/: T000-2xbw-p4-users  T001-2xbw-p4-users
test/data/: p4-users-T001.xml  p4-users.xbw  p4-users.xml
